<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.algart</groupId>
    <artifactId>algart</artifactId>
    <version>1.4.10</version>
    <!--
    Please remember that you Arrays.SystemSettings.VERSION constant must be equal to this value!
    This condition is checked automatically in the "release-maven-central" profile below.
    -->

    <name>AlgART Java Libraries</name>
    <description>Open-source Java libraries, supporting generalized smart arrays and matrices with elements
        of any types, including a wide set of of 2D-, 3D- and multidimensional image processing
        and other algorithms, working with arrays and matrices.
    </description>
    <url>http://algart.net/java/AlgART/</url>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>http://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Alievsky</name>
            <email>daniel@iskrael.org</email>
            <organization>AlgART laboratory</organization>
            <organizationUrl>http://algart.net</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://bitbucket.org/DanielAlievsky/algart.git</connection>
        <developerConnection>scm:git:https://bitbucket.org/DanielAlievsky/algart.git</developerConnection>
        <url>https://bitbucket.org/DanielAlievsky/algart.git</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!-- Signing JARs by GnuPG (requirement of Maven Central) -->
            <!-- Please ACTIVATE this profile before deployment! -->
            <id>release-maven-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>test-version</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <echo level="info"/>
                                        <java classname="net.algart.executable.verifier.CheckAlgARTVersion"
                                              fork="true" failonerror="true">
                                            <!-- See https://ant.apache.org/manual/Tasks/java.html -->
                                            <classpath refid="maven.compile.classpath"/>
                                            <arg value="${project.version}"/>
                                        </java>
                                        <echo level="info"/>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <doclint>none</doclint>
                            <excludePackageNames>
                                net.algart.executable.*
                            </excludePackageNames>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <!--
                        Sometimes we need to clarify the nome of gpg executable file; for example,
                        some old configuration required to specify here "gpg2.exe" for Windows platform.
                        It can be made via settings.xml, as described at
                        https://central.sonatype.org/publish/publish-maven/#gpg-signed-components
                        -->
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <name>Sonatype Nexus Snapshots</name>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>
</project>